<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/lang_system" android:title="@string/system_default" />
            <item android:id="@+id/lang_en" android:title="@string/english" />
            <item android:id="@+id/lang_ru" android:title="@string/russian" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_theme"
        android:icon="@drawable/theme"
        android:title="@string/theme"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/theme_system" android:title="@string/system_default" />
            <item android:id="@+id/theme_light" android:title="@string/light_theme" />
            <item android:id="@+id/theme_dark" android:title="@string/dark_theme" />
        </menu>
    </item>

</menu>
