<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/stats_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/stats"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stats_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/footer_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
